# rest_player_game

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  postgres_init.sql  pyproject.toml
.github/workflows/: ci.yml
.postman/: rest_player_game.postman_collection.json
alembic/: env.py
alembic/versions/: 9ff68a68e4d4_initial.py
src/: main.py
src/domain/: auth.py  models.py  repositories.py  services.py
src/infrastructure/: api.py  auth.py  database.py  dto.py  llm.py  orm.py  prompt.py  repositories.py
src/test/domain/: test_services.py
src/test/infrastructure/: test_orm.py
