[tool.poetry]
name = "rest-player-game"
version = "0.1.0"
description = ""
authors = ["Aleksandr <gggols32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
openai = "^1.60.1"
fastapi = {extras = ["standard"], version = "^0.115.7"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.37"
psycopg2 = "^2.9.10"
structlog = "^25.1.0"
alembic = "^1.14.1"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
