[tool.poetry]
name = "rest-player-game"
version = "0.1.0"
description = ""
authors = ["Aleksandr <gggols32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
openai = "^1.60.1"
fastapi = {extras = ["standard"], version = "^0.115.7"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.37"
psycopg2 = "^2.9.10"
structlog = "^25.1.0"
alembic = "^1.14.1"
pytest = "^8.3.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.10.1"
black = "^25.1.0"
ruff = "^0.11.2"
pre-commit = "^4.2.0"
isort = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
